restructuredto be a normal app with no tenant stuff